First graph vis

--- a/WebApplication2/InfoVis.csproj
+++ b/WebApplication2/InfoVis.csproj
@@ -213,6 +213,7 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Link.cs" />
     <Compile Include="Models\MovieViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
@@ -302,6 +303,7 @@
     <Content Include="Scripts\app\register.viewmodel.js" />
     <Content Include="Scripts\app\registerExternal.viewmodel.js" />
     <Content Include="Scripts\app\userInfo.viewmodel.js" />
+    <None Include="Views\data\flare.json" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\_Home.cshtml" />
     <Content Include="Views\Home\_Login.cshtml" />
