--- a/WebApplication2/Views/Web.config
+++ b/WebApplication2/Views/Web.config
@@ -31,5 +31,8 @@
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
+  <staticContent>
+      <mimeMap fileExtension=".json" mimeType="application/json; charset=UTF-8" />
+    </staticContent>
   </system.webServer>
 </configuration>
