--- a/WebApplication2/InfoVis.csproj
+++ b/WebApplication2/InfoVis.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Link.cs" />
     <Compile Include="Models\MovieViewModel.cs" />
+    <Compile Include="Models\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
