--- a/WebApplication2/InfoVis.csproj
+++ b/WebApplication2/InfoVis.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Link.cs" />
+    <Compile Include="Models\MostPopularViewModel.cs" />
     <Compile Include="Models\MovieViewModel.cs" />
     <Compile Include="Models\Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -250,6 +251,17 @@
     <Content Include="Content\JQueryUI\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\JQueryUI\jquery-ui-1.10.4.custom.css" />
     <Content Include="Content\JQueryUI\jquery-ui-1.10.4.custom.min.css" />
+    <Content Include="Content\loopjSlider\simple-slider-volume.css" />
+    <Content Include="Content\loopjSlider\simple-slider.css" />
+    <Content Include="Content\movieVis\bootstrap-responsive.css" />
+    <Content Include="Content\movieVis\bootstrap-responsive.min.css" />
+    <Content Include="Content\movieVis\bootstrap.css" />
+    <Content Include="Content\movieVis\bootstrap.min.css" />
+    <Content Include="Content\movieVis\Images\star-half.png" />
+    <Content Include="Content\movieVis\Images\star-off.png" />
+    <Content Include="Content\movieVis\Images\star-on.png" />
+    <Content Include="Content\movieVis\reset.css" />
+    <Content Include="Content\movieVis\style.css" />
     <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -268,11 +280,24 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\bootstrap\bootstrap.js" />
     <Content Include="Scripts\d3.js" />
     <Content Include="Scripts\d3.min.js" />
     <Content Include="Scripts\d3\cloud.js" />
+    <Content Include="Scripts\d3\d3.chart.js" />
+    <Content Include="Scripts\d3\d3.chart.min.js" />
+    <Content Include="Scripts\d3\d3.csv.js" />
+    <Content Include="Scripts\d3\d3.csv.min.js" />
+    <Content Include="Scripts\d3\d3.geo.js" />
+    <Content Include="Scripts\d3\d3.geo.min.js" />
+    <Content Include="Scripts\d3\d3.geom.js" />
+    <Content Include="Scripts\d3\d3.geom.min.js" />
     <Content Include="Scripts\d3\d3.js" />
+    <Content Include="Scripts\d3\d3.layout.js" />
+    <Content Include="Scripts\d3\d3.layout.min.js" />
     <Content Include="Scripts\d3\d3.min.js" />
+    <Content Include="Scripts\d3\d3.time.js" />
+    <Content Include="Scripts\d3\d3.time.min.js" />
     <Content Include="Scripts\JQRangeSlider\jQAllRangeSliders-min.js" />
     <Content Include="Scripts\JQRangeSlider\jQAllRangeSliders-withRuler-min.js" />
     <Content Include="Scripts\JQRangeSlider\jQDateRangeSlider-min.js" />
@@ -290,7 +315,16 @@
     <Content Include="Scripts\knockout-2.3.0.js" />
     <Content Include="Scripts\knockout.validation.debug.js" />
     <Content Include="Scripts\knockout.validation.js" />
+    <Content Include="Scripts\loopjSlider\simple-slider.js" />
+    <Content Include="Scripts\loopjSlider\simple-slider.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\movieVis\actorscript.js" />
+    <Content Include="Scripts\movieVis\actorviz.js" />
+    <Content Include="Scripts\movieVis\CustomTooltip.js" />
+    <Content Include="Scripts\movieVis\linechart.js" />
+    <Content Include="Scripts\movieVis\moviescript.js" />
+    <Content Include="Scripts\movieVis\movieviz.js" />
+    <Content Include="Scripts\movieVis\plugins.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
@@ -304,6 +338,7 @@
     <Content Include="Scripts\app\register.viewmodel.js" />
     <Content Include="Scripts\app\registerExternal.viewmodel.js" />
     <Content Include="Scripts\app\userInfo.viewmodel.js" />
+    <Content Include="Scripts\loopjSlider\simple-slider.coffee" />
     <None Include="Views\data\flare.json" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\_Home.cshtml" />
@@ -328,6 +363,8 @@
     </Content>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\ViewMovie.cshtml" />
+    <Content Include="Views\Home\MostPopular.cshtml" />
+    <Content Include="Views\Home\PopularActors.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
