--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\..\..\..\..\Tools\TMDbLib-master\TMDbLib\packages.config" />
+  <repository path="..\TMDbLib\packages.config" />
   <repository path="..\WebApplication2\packages.config" />
 </repositories>
